🐈 Perf: 优化追番页面
- 在不满一页的情况下隐藏页面导航
- 日落模式下追番页面的遮罩颜色

--- a/assets/css/main/themes.css
+++ b/assets/css/main/themes.css
@@ -363,7 +363,8 @@
 }
 .body-sepia .search,
 .body-sepia .login,
-.body-sepia .mobile-menu {
+.body-sepia .mobile-menu,
+.body-sepia .bangumi-des {
 	background-color: rgba(248,241,228,0.98);
 }
 .body-sepia .search-form input {
@@ -399,3 +400,4 @@
 .body-sepia .comment-content.bubble::before {
 	border-right-color: rgb(250,230,220)
 }	
+.body-sepia
