:eyes: Fix: 页脚版权信息换行

--- a/assets/css/main/special.css
+++ b/assets/css/main/special.css
@@ -70,7 +70,8 @@
 .footer-info a {
 	color: #1e1e1e;
 	text-decoration: none;
-	transition: opacity .2s
+	transition: opacity .2s;
+	display: inline!important
 }
 .footer-info a:hover {
 	opacity: .9
