--- a/assets/css/main/page.css
+++ b/assets/css/main/page.css
@@ -130,6 +130,14 @@
 .links-container {
 	padding: 6px;
 }
+.links-img {
+	padding: 0
+}
+.links-img img {
+	margin: 0;
+	width: 100%;
+	height: 100%
+}
 
 /* Saying 说说 */
 .saying-meta {
