--- a/assets/css/main/page.css
+++ b/assets/css/main/page.css
@@ -82,7 +82,7 @@
 .links-box {
 	margin: 10px;
 	margin-left: 0;
-	margin-top: 30px
+	margin-top: 10px
 }
 .links-box h2 {
 	text-align: Center;
@@ -131,12 +131,15 @@
 	padding: 6px;
 }
 .links-img {
-	padding: 0
+	padding: 0;
+	width: 100%;
+	height: 100%
 }
 .links-img img {
 	margin: 0;
 	width: 100%;
-	height: 100%
+	height: 100%;
+	object-fit: cover
 }
 
 /* Saying 说说 */
