:zap: Add: 各种优化、新增和修复
- 新增：支持自定义「导航栏图标按钮」
- 新增：文章目录（使用 `{:toc:}` 在文中插入目录）
- 新增：归档页面中添加「文章分类」栏目
- 优化：将设置项「Pjax 完成后执行事件」更改为更准确的「Pjax 回调函数」
- 修复：一个存在了超久的拼写错误（`paresNav`=>`parseNav`）
- 修复：archive 页面（即分类、标签、搜索等）文章头图问题

--- a/assets/css/main/nav.css
+++ b/assets/css/main/nav.css
@@ -230,6 +230,7 @@
 	background: rgb(240,240,240);
 }
 .drawer-icon {
+	display: inline-block;
 	height: 45px;
 	width: 45px;
 	border-radius: 100%;
@@ -238,9 +239,13 @@
 	margin: 0 3px;
 	border: none;
 	outline: none;
+	padding: 1px 6px;
 }
 .drawer-icon:hover {
 	background: rgb(240,240,240);
+}
+a.drawer-icon {
+	line-height: 2.55
 }
 
 /* Search/Login/Menu */
