--- a/assets/css/main/post.css
+++ b/assets/css/main/post.css
@@ -16,9 +16,9 @@
 }
 .post-body,.post-item,.saying-item,#comment-form {
 	background: #fff;
-	box-shadow: 0 2px 10px var(--shadow-color);
-	-moz-box-shadow: 0 2px 10px var(--shadow-color);
-	-webkit-box-shadow: 0 2px 10px var(--shadow-color);
+	box-shadow: 0 0 8px var(--shadow-color);
+	-moz-box-shadow: 0 0 8px var(--shadow-color);
+	-webkit-box-shadow: 0 0 8px var(--shadow-color);
 	transition: background .1s
 }
 .post-banner-box {
